apply plugin: 'java'
apply plugin: 'application'

repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
}

dependencies {
    compileOnly "org.jetbrains:annotations:24.+"
    implementation "com.github.jwharm.java-gi:glib:latest.release"
    implementation "com.github.jwharm.java-gi:gtk:latest.release"
    implementation "com.github.jwharm.java-gi:adwaita:latest.release"
}

task compileResources {
    doLast {
        exec {
            workingDir 'src/main/resources'
            commandLine 'glib-compile-resources', 'helloworld.gresource.xml'
        }
    }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

tasks.withType(JavaCompile) {
    dependsOn compileResources
    options.compilerArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

jar {
    archiveBaseName = "hellotemplate"
    archiveVersion = "0.1.0"
}

mainClassName = "io.github.jwharm.javagi.examples.hellotemplate.Main"
